deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seerrplay
  labels:
    app.kubernetes.io/part-of: seerrplay
