deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerrplay-website
  namespace: seerrplay
  labels:
    app.kubernetes.io/name: seerrplay-website
    app.kubernetes.io/part-of: seerrplay
spec:
  selector:
    app.kubernetes.io/name: seerrplay-website
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
