deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerrplay-website
  namespace: seerrplay
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: seerrplay.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seerrplay-website
                port:
                  name: http
